--- a/.github/workflows/rspec_rubocop.yml
+++ b/.github/workflows/rspec_rubocop.yml
@@ -32,7 +32,7 @@ jobs:
           bundler-version: latest
         - ruby-version: 2.7
           bundler-version: latest
-        - ruby-version: 3.0
+        - ruby-version: '3.0'
           bundler-version: latest
         - ruby-version: 3.1
           bundler-version: latest
